<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutUs">

    <TextView
        android:id="@+id/teamInfo"
        android:layout_width="231dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="443dp"
        android:fontFamily="@font/playball"
        android:text="@string/team_members"
        android:textColor="#009688"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamInfo2"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginStart="203dp"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="425dp"
        android:fontFamily="@font/playball"
        android:text="@string/ghazal_kalhori"
        android:textColor="#673AB7"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamInfo3"
        android:layout_width="241dp"
        android:layout_height="40dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="366dp"
        android:fontFamily="@font/playball"
        android:text="@string/reyhaneh_kharazmi"
        android:textColor="#673AB7"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appInfo"
        android:layout_width="389dp"
        android:layout_height="139dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="169dp"
        android:fontFamily="@font/acme"
        android:text="@string/google_classroom_is_a_free_web_service_developed_by_google_for_schools_that_aims_to_simplify_creating_distributing_and_grading_assignments_in_a_paperless_way_the_primary_purpose_of_google_classroom_is_to_streamline_the_process_of_sharing_files_between_teachers_and_students"
        android:textColor="#1A3C1C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamInfo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="406dp"
        android:fontFamily="serif"
        android:text="@string/https_github_com_gkalhori"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamInfo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="237dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="347dp"
        android:fontFamily="serif"
        android:text="@string/https_github_com_kharazmireyhaneh"
        android:textColor="#FC000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="444dp"
        android:layout_height="180dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appInfo"
        app:layout_constraintVertical_bias="0.63"
        app:srcCompat="@drawable/cr" />

    <TextView
        android:id="@+id/appInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="413dp"
        android:layout_marginBottom="169dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/ap_final_project_summer_2019"
        android:textColor="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.699"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="409dp"
        android:layout_height="121dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/teamInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/au" />

</android.support.constraint.ConstraintLayout>